--- a/css/style.css
+++ b/css/style.css
@@ -682,6 +682,9 @@ section,
 html {
   scroll-behavior: smooth;
   font-size: 16px;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
